[metadata]
name = keystone_hybrid_backend
summary = Time Warner Cable Keystone Hybrid Auth Backend

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
keystone.assignment =
    hybrid = keystone_hybrid_backend.hybrid_assignment:Assignment
keystone.identity =
    hybrid = keystone_hybrid_backend.hybrid_identity:Identity

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
